--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,10 +35,10 @@
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <action android:name="android.intent.action.PROCESS_TEXT" />
-
+<!---->
                 <category android:name="android.intent.category.DEFAULT" />
 
-                <data android:mimeType="text/plain" />
+                <!--                <data android:mimeType="text/plain" />-->
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
